# DesyncCompare

./: README.md
src/: CMakeLists.txt  Cluster.cpp  Cluster.h  ComparisonResult.cpp  ComparisonResult.h  ConsoleColors.h  EntryData.cpp  EntryData.h  LogReader.cpp  LogReader.h  main.cpp
